--- a/src/NavLinks.css
+++ b/src/NavLinks.css
@@ -7,6 +7,7 @@
   text-transform: uppercase;
   z-index: 1;
   transition: transform .6s, visibility 0s;
+  user-select: none;
 }
 @media (max-width: 900px) {
   .nav-links {
